HW5/testcases/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS
    SCOMMENT
    NEWLINE

Grammar

Rule 0     S' -> pgm
Rule 1     pgm -> decl_star
Rule 2     decl_star -> decl decl_star
Rule 3     decl_star -> empty
Rule 4     decl -> vardecl
Rule 5     decl -> fundecl
Rule 6     vardecl -> type varlist SEMICOLON
Rule 7     fundecl -> type IDENTIFIER LPAREN formalsOpt RPAREN stmt
Rule 8     formalsOpt -> formals
Rule 9     formalsOpt -> empty
Rule 10    type -> INT
Rule 11    type -> BOOL
Rule 12    type -> VOID
Rule 13    type -> type LSQUARE RSQUARE
Rule 14    varlist -> IDENTIFIER COMMA varlist
Rule 15    varlist -> IDENTIFIER
Rule 16    formals -> type IDENTIFIER COMMA formals
Rule 17    formals -> type IDENTIFIER
Rule 18    stmt -> SE SEMICOLON
Rule 19    stmt -> PRINT LPAREN AE RPAREN SEMICOLON
Rule 20    stmt -> LBRACE vardecl_star stmt_star RBRACE
Rule 21    vardecl_star -> vardecl vardecl_star
Rule 22    vardecl_star -> empty
Rule 23    stmt_star -> stmt stmt_star
Rule 24    stmt_star -> empty
Rule 25    stmt -> IF AE THEN stmt ELSE stmt
Rule 26    stmt -> IF AE THEN stmt
Rule 27    stmt -> WHILE AE DO stmt
Rule 28    stmt -> FOR LPAREN SEOpt SEMICOLON AEOpt SEMICOLON SEOpt RPAREN stmt
Rule 29    SEOpt -> SE
Rule 30    SEOpt -> empty
Rule 31    AEOpt -> AE
Rule 32    AEOpt -> empty
Rule 33    stmt -> DO stmt WHILE AE SEMICOLON
Rule 34    stmt -> RETURN AEOpt SEMICOLON
Rule 35    SE -> lhs EQUALS AE
Rule 36    SE -> lhs INCREMENT
Rule 37    SE -> lhs DECREMENT
Rule 38    SE -> INCREMENT lhs
Rule 39    SE -> DECREMENT lhs
Rule 40    lhs -> IDENTIFIER
Rule 41    lhs -> arrayAccess
Rule 42    AE -> AE binop AE
Rule 43    AE -> unop AE
Rule 44    AE -> primary
Rule 45    AE -> SE
Rule 46    AE -> newArray
Rule 47    primary -> INTCONST
Rule 48    primary -> TRUE
Rule 49    primary -> FALSE
Rule 50    primary -> INPUT LPAREN RPAREN
Rule 51    primary -> LPAREN AE RPAREN
Rule 52    primary -> IDENTIFIER
Rule 53    primary -> arrayAccess
Rule 54    primary -> functionCall
Rule 55    arrayAccess -> primary LSQUARE AE RSQUARE
Rule 56    functionCall -> IDENTIFIER LPAREN argsOpt RPAREN
Rule 57    argsOpt -> args
Rule 58    argsOpt -> empty
Rule 59    args -> AE COMMA args
Rule 60    args -> AE
Rule 61    newArray -> NEW type dimexpr dim_star
Rule 62    dim_star -> dim dim_star
Rule 63    dim_star -> empty
Rule 64    dimexpr -> LSQUARE AE RSQUARE
Rule 65    dim -> LSQUARE RSQUARE
Rule 66    binop -> PLUS
Rule 67    binop -> MINUS
Rule 68    binop -> STAR
Rule 69    binop -> DIV
Rule 70    binop -> MOD
Rule 71    binop -> AND
Rule 72    binop -> OR
Rule 73    binop -> EQUAL
Rule 74    binop -> NEQUAL
Rule 75    binop -> LTHANEQ
Rule 76    binop -> LTHAN
Rule 77    binop -> GTHANEQ
Rule 78    binop -> GTHAN
Rule 79    unop -> MINUS
Rule 80    unop -> NOT
Rule 81    empty -> <empty>

Terminals, with rules where they appear

AND                  : 71
BOOL                 : 11
COMMA                : 14 16 59
DECREMENT            : 37 39
DIV                  : 69
DO                   : 27 33
ELSE                 : 25
EQUAL                : 73
EQUALS               : 35
FALSE                : 49
FOR                  : 28
GTHAN                : 78
GTHANEQ              : 77
IDENTIFIER           : 7 14 15 16 17 40 52 56
IF                   : 25 26
INCREMENT            : 36 38
INPUT                : 50
INT                  : 10
INTCONST             : 47
LBRACE               : 20
LPAREN               : 7 19 28 50 51 56
LSQUARE              : 13 55 64 65
LTHAN                : 76
LTHANEQ              : 75
MINUS                : 67 79
MOD                  : 70
NEQUAL               : 74
NEW                  : 61
NEWLINE              : 
NOT                  : 80
OR                   : 72
PLUS                 : 66
PRINT                : 19
RBRACE               : 20
RETURN               : 34
RPAREN               : 7 19 28 50 51 56
RSQUARE              : 13 55 64 65
SCOMMENT             : 
SEMICOLON            : 6 18 19 28 28 33 34
STAR                 : 68
THEN                 : 25 26
TRUE                 : 48
UMINUS               : 
VOID                 : 12
WHILE                : 27 33
error                : 

Nonterminals, with rules where they appear

AE                   : 19 25 26 27 31 33 35 42 42 43 51 55 59 60 64
AEOpt                : 28 34
SE                   : 18 29 45
SEOpt                : 28 28
args                 : 57 59
argsOpt              : 56
arrayAccess          : 41 53
binop                : 42
decl                 : 2
decl_star            : 1 2
dim                  : 62
dim_star             : 61 62
dimexpr              : 61
empty                : 3 9 22 24 30 32 58 63
formals              : 8 16
formalsOpt           : 7
functionCall         : 54
fundecl              : 5
lhs                  : 35 36 37 38 39
newArray             : 46
pgm                  : 0
primary              : 44 55
stmt                 : 7 23 25 25 26 27 28 33
stmt_star            : 20 23
type                 : 6 7 13 16 17 61
unop                 : 43
vardecl              : 4 21
vardecl_star         : 20 21
varlist              : 6 14

Parsing method: LALR

state 0

    (0) S' -> . pgm
    (1) pgm -> . decl_star
    (2) decl_star -> . decl decl_star
    (3) decl_star -> . empty
    (4) decl -> . vardecl
    (5) decl -> . fundecl
    (81) empty -> .
    (6) vardecl -> . type varlist SEMICOLON
    (7) fundecl -> . type IDENTIFIER LPAREN formalsOpt RPAREN stmt
    (10) type -> . INT
    (11) type -> . BOOL
    (12) type -> . VOID
    (13) type -> . type LSQUARE RSQUARE

    $end            reduce using rule 81 (empty -> .)
    INT             shift and go to state 9
    BOOL            shift and go to state 7
    VOID            shift and go to state 4

    decl                           shift and go to state 1
    decl_star                      shift and go to state 2
    vardecl                        shift and go to state 3
    pgm                            shift and go to state 5
    fundecl                        shift and go to state 6
    type                           shift and go to state 8
    empty                          shift and go to state 10

state 1

    (2) decl_star -> decl . decl_star
    (2) decl_star -> . decl decl_star
    (3) decl_star -> . empty
    (4) decl -> . vardecl
    (5) decl -> . fundecl
    (81) empty -> .
    (6) vardecl -> . type varlist SEMICOLON
    (7) fundecl -> . type IDENTIFIER LPAREN formalsOpt RPAREN stmt
    (10) type -> . INT
    (11) type -> . BOOL
    (12) type -> . VOID
    (13) type -> . type LSQUARE RSQUARE

    $end            reduce using rule 81 (empty -> .)
    INT             shift and go to state 9
    BOOL            shift and go to state 7
    VOID            shift and go to state 4

    decl                           shift and go to state 1
    decl_star                      shift and go to state 11
    vardecl                        shift and go to state 3
    fundecl                        shift and go to state 6
    type                           shift and go to state 8
    empty                          shift and go to state 10

state 2

    (1) pgm -> decl_star .

    $end            reduce using rule 1 (pgm -> decl_star .)


state 3

    (4) decl -> vardecl .

    INT             reduce using rule 4 (decl -> vardecl .)
    BOOL            reduce using rule 4 (decl -> vardecl .)
    VOID            reduce using rule 4 (decl -> vardecl .)
    $end            reduce using rule 4 (decl -> vardecl .)


state 4

    (12) type -> VOID .

    IDENTIFIER      reduce using rule 12 (type -> VOID .)
    LSQUARE         reduce using rule 12 (type -> VOID .)


state 5

    (0) S' -> pgm .



state 6

    (5) decl -> fundecl .

    INT             reduce using rule 5 (decl -> fundecl .)
    BOOL            reduce using rule 5 (decl -> fundecl .)
    VOID            reduce using rule 5 (decl -> fundecl .)
    $end            reduce using rule 5 (decl -> fundecl .)


state 7

    (11) type -> BOOL .

    IDENTIFIER      reduce using rule 11 (type -> BOOL .)
    LSQUARE         reduce using rule 11 (type -> BOOL .)


state 8

    (6) vardecl -> type . varlist SEMICOLON
    (7) fundecl -> type . IDENTIFIER LPAREN formalsOpt RPAREN stmt
    (13) type -> type . LSQUARE RSQUARE
    (14) varlist -> . IDENTIFIER COMMA varlist
    (15) varlist -> . IDENTIFIER

    IDENTIFIER      shift and go to state 14
    LSQUARE         shift and go to state 12

    varlist                        shift and go to state 13

state 9

    (10) type -> INT .

    IDENTIFIER      reduce using rule 10 (type -> INT .)
    LSQUARE         reduce using rule 10 (type -> INT .)


state 10

    (3) decl_star -> empty .

    $end            reduce using rule 3 (decl_star -> empty .)


state 11

    (2) decl_star -> decl decl_star .

    $end            reduce using rule 2 (decl_star -> decl decl_star .)


state 12

    (13) type -> type LSQUARE . RSQUARE

    RSQUARE         shift and go to state 15


state 13

    (6) vardecl -> type varlist . SEMICOLON

    SEMICOLON       shift and go to state 16


state 14

    (7) fundecl -> type IDENTIFIER . LPAREN formalsOpt RPAREN stmt
    (14) varlist -> IDENTIFIER . COMMA varlist
    (15) varlist -> IDENTIFIER .

    LPAREN          shift and go to state 18
    COMMA           shift and go to state 17
    SEMICOLON       reduce using rule 15 (varlist -> IDENTIFIER .)


state 15

    (13) type -> type LSQUARE RSQUARE .

    IDENTIFIER      reduce using rule 13 (type -> type LSQUARE RSQUARE .)
    LSQUARE         reduce using rule 13 (type -> type LSQUARE RSQUARE .)


state 16

    (6) vardecl -> type varlist SEMICOLON .

    INT             reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    BOOL            reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    VOID            reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    $end            reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    PRINT           reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    LBRACE          reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    IF              reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    WHILE           reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    FOR             reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    DO              reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    RETURN          reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    INCREMENT       reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    DECREMENT       reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    IDENTIFIER      reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    INTCONST        reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    TRUE            reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    FALSE           reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    INPUT           reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    LPAREN          reduce using rule 6 (vardecl -> type varlist SEMICOLON .)
    RBRACE          reduce using rule 6 (vardecl -> type varlist SEMICOLON .)


state 17

    (14) varlist -> IDENTIFIER COMMA . varlist
    (14) varlist -> . IDENTIFIER COMMA varlist
    (15) varlist -> . IDENTIFIER

    IDENTIFIER      shift and go to state 20

    varlist                        shift and go to state 19

state 18

    (7) fundecl -> type IDENTIFIER LPAREN . formalsOpt RPAREN stmt
    (8) formalsOpt -> . formals
    (9) formalsOpt -> . empty
    (16) formals -> . type IDENTIFIER COMMA formals
    (17) formals -> . type IDENTIFIER
    (81) empty -> .
    (10) type -> . INT
    (11) type -> . BOOL
    (12) type -> . VOID
    (13) type -> . type LSQUARE RSQUARE

    RPAREN          reduce using rule 81 (empty -> .)
    INT             shift and go to state 9
    BOOL            shift and go to state 7
    VOID            shift and go to state 4

    formalsOpt                     shift and go to state 21
    type                           shift and go to state 22
    empty                          shift and go to state 23
    formals                        shift and go to state 24

state 19

    (14) varlist -> IDENTIFIER COMMA varlist .

    SEMICOLON       reduce using rule 14 (varlist -> IDENTIFIER COMMA varlist .)


state 20

    (14) varlist -> IDENTIFIER . COMMA varlist
    (15) varlist -> IDENTIFIER .

    COMMA           shift and go to state 17
    SEMICOLON       reduce using rule 15 (varlist -> IDENTIFIER .)


state 21

    (7) fundecl -> type IDENTIFIER LPAREN formalsOpt . RPAREN stmt

    RPAREN          shift and go to state 25


state 22

    (16) formals -> type . IDENTIFIER COMMA formals
    (17) formals -> type . IDENTIFIER
    (13) type -> type . LSQUARE RSQUARE

    IDENTIFIER      shift and go to state 26
    LSQUARE         shift and go to state 12


state 23

    (9) formalsOpt -> empty .

    RPAREN          reduce using rule 9 (formalsOpt -> empty .)


state 24

    (8) formalsOpt -> formals .

    RPAREN          reduce using rule 8 (formalsOpt -> formals .)


state 25

    (7) fundecl -> type IDENTIFIER LPAREN formalsOpt RPAREN . stmt
    (18) stmt -> . SE SEMICOLON
    (19) stmt -> . PRINT LPAREN AE RPAREN SEMICOLON
    (20) stmt -> . LBRACE vardecl_star stmt_star RBRACE
    (25) stmt -> . IF AE THEN stmt ELSE stmt
    (26) stmt -> . IF AE THEN stmt
    (27) stmt -> . WHILE AE DO stmt
    (28) stmt -> . FOR LPAREN SEOpt SEMICOLON AEOpt SEMICOLON SEOpt RPAREN stmt
    (33) stmt -> . DO stmt WHILE AE SEMICOLON
    (34) stmt -> . RETURN AEOpt SEMICOLON
    (35) SE -> . lhs EQUALS AE
    (36) SE -> . lhs INCREMENT
    (37) SE -> . lhs DECREMENT
    (38) SE -> . INCREMENT lhs
    (39) SE -> . DECREMENT lhs
    (40) lhs -> . IDENTIFIER
    (41) lhs -> . arrayAccess
    (55) arrayAccess -> . primary LSQUARE AE RSQUARE
    (47) primary -> . INTCONST
    (48) primary -> . TRUE
    (49) primary -> . FALSE
    (50) primary -> . INPUT LPAREN RPAREN
    (51) primary -> . LPAREN AE RPAREN
    (52) primary -> . IDENTIFIER
    (53) primary -> . arrayAccess
    (54) primary -> . functionCall
    (56) functionCall -> . IDENTIFIER LPAREN argsOpt RPAREN

    PRINT           shift and go to state 30
    LBRACE          shift and go to state 43
    IF              shift and go to state 42
    WHILE           shift and go to state 29
    FOR             shift and go to state 36
    DO              shift and go to state 27
    RETURN          shift and go to state 31
    INCREMENT       shift and go to state 33
    DECREMENT       shift and go to state 46
    IDENTIFIER      shift and go to state 35
    INTCONST        shift and go to state 40
    TRUE            shift and go to state 32
    FALSE           shift and go to state 44
    INPUT           shift and go to state 41
    LPAREN          shift and go to state 39

    primary                        shift and go to state 28
    stmt                           shift and go to state 37
    functionCall                   shift and go to state 38
    lhs                            shift and go to state 45
    arrayAccess                    shift and go to state 34
    SE                             shift and go to state 47

state 26

    (16) formals -> type IDENTIFIER . COMMA formals
    (17) formals -> type IDENTIFIER .

    COMMA           shift and go to state 48
    RPAREN          reduce using rule 17 (formals -> type IDENTIFIER .)


state 27

    (33) stmt -> DO . stmt WHILE AE SEMICOLON
    (18) stmt -> . SE SEMICOLON
    (19) stmt -> . PRINT LPAREN AE RPAREN SEMICOLON
    (20) stmt -> . LBRACE vardecl_star stmt_star RBRACE
    (25) stmt -> . IF AE THEN stmt ELSE stmt
    (26) stmt -> . IF AE THEN stmt
    (27) stmt -> . WHILE AE DO stmt
    (28) stmt -> . FOR LPAREN SEOpt SEMICOLON AEOpt SEMICOLON SEOpt RPAREN stmt
    (33) stmt -> . DO stmt WHILE AE SEMICOLON
    (34) stmt -> . RETURN AEOpt SEMICOLON
    (35) SE -> . lhs EQUALS AE
    (36) SE -> . lhs INCREMENT
    (37) SE -> . lhs DECREMENT
    (38) SE -> . INCREMENT lhs
    (39) SE -> . DECREMENT lhs
    (40) lhs -> . IDENTIFIER
    (41) lhs -> . arrayAccess
    (55) arrayAccess -> . primary LSQUARE AE RSQUARE
    (47) primary -> . INTCONST
    (48) primary -> . TRUE
    (49) primary -> . FALSE
    (50) primary -> . INPUT LPAREN RPAREN
    (51) primary -> . LPAREN AE RPAREN
    (52) primary -> . IDENTIFIER
    (53) primary -> . arrayAccess
    (54) primary -> . functionCall
    (56) functionCall -> . IDENTIFIER LPAREN argsOpt RPAREN

    PRINT           shift and go to state 30
    LBRACE          shift and go to state 43
    IF              shift and go to state 42
    WHILE           shift and go to state 29
    FOR             shift and go to state 36
    DO              shift and go to state 27
    RETURN          shift and go to state 31
    INCREMENT       shift and go to state 33
    DECREMENT       shift and go to state 46
    IDENTIFIER      shift and go to state 35
    INTCONST        shift and go to state 40
    TRUE            shift and go to state 32
    FALSE           shift and go to state 44
    INPUT           shift and go to state 41
    LPAREN          shift and go to state 39

    primary                        shift and go to state 28
    stmt                           shift and go to state 49
    functionCall                   shift and go to state 38
    lhs                            shift and go to state 45
    arrayAccess                    shift and go to state 34
    SE                             shift and go to state 47

state 28

    (55) arrayAccess -> primary . LSQUARE AE RSQUARE

    LSQUARE         shift and go to state 50


state 29

    (27) stmt -> WHILE . AE DO stmt
    (42) AE -> . AE binop AE
    (43) AE -> . unop AE
    (44) AE -> . primary
    (45) AE -> . SE
    (46) AE -> . newArray
    (79) unop -> . MINUS
    (80) unop -> . NOT
    (47) primary -> . INTCONST
    (48) primary -> . TRUE
    (49) primary -> . FALSE
    (50) primary -> . INPUT LPAREN RPAREN
    (51) primary -> . LPAREN AE RPAREN
    (52) primary -> . IDENTIFIER
    (53) primary -> . arrayAccess
    (54) primary -> . functionCall
    (35) SE -> . lhs EQUALS AE
    (36) SE -> . lhs INCREMENT
    (37) SE -> . lhs DECREMENT
    (38) SE -> . INCREMENT lhs
    (39) SE -> . DECREMENT lhs
    (61) newArray -> . NEW type dimexpr dim_star
    (55) arrayAccess -> . primary LSQUARE AE RSQUARE
    (56) functionCall -> . IDENTIFIER LPAREN argsOpt RPAREN
    (40) lhs -> . IDENTIFIER
    (41) lhs -> . arrayAccess

    MINUS           shift and go to state 55
    NOT             shift and go to state 59
    INTCONST        shift and go to state 40
    TRUE            shift and go to state 32
    FALSE           shift and go to state 44
    INPUT           shift and go to state 41
    LPAREN          shift and go to state 39
    IDENTIFIER      shift and go to state 57
    INCREMENT       shift and go to state 33
    DECREMENT       shift and go to state 46
    NEW             shift and go to state 54

    unop                           shift and go to state 51
    AE                             shift and go to state 58
    primary                        shift and go to state 52
    functionCall                   shift and go to state 38
    newArray                       shift and go to state 53
    lhs                            shift and go to state 45
    arrayAccess                    shift and go to state 56
    SE                             shift and go to state 60

state 30

    (19) stmt -> PRINT . LPAREN AE RPAREN SEMICOLON

    LPAREN          shift and go to state 61


state 31

    (34) stmt -> RETURN . AEOpt SEMICOLON
    (31) AEOpt -> . AE
    (32) AEOpt -> . empty
    (42) AE -> . AE binop AE
    (43) AE -> . unop AE
    (44) AE -> . primary
    (45) AE -> . SE
    (46) AE -> . newArray
    (81) empty -> .
    (79) unop -> . MINUS
    (80) unop -> . NOT
    (47) primary -> . INTCONST
    (48) primary -> . TRUE
    (49) primary -> . FALSE
    (50) primary -> . INPUT LPAREN RPAREN
    (51) primary -> . LPAREN AE RPAREN
    (52) primary -> . IDENTIFIER
    (53) primary -> . arrayAccess
    (54) primary -> . functionCall
    (35) SE -> . lhs EQUALS AE
    (36) SE -> . lhs INCREMENT
    (37) SE -> . lhs DECREMENT
    (38) SE -> . INCREMENT lhs
    (39) SE -> . DECREMENT lhs
    (61) newArray -> . NEW type dimexpr dim_star
    (55) arrayAccess -> . primary LSQUARE AE RSQUARE
    (56) functionCall -> . IDENTIFIER LPAREN argsOpt RPAREN
    (40) lhs -> . IDENTIFIER
    (41) lhs -> . arrayAccess

    SEMICOLON       reduce using rule 81 (empty -> .)
    MINUS           shift and go to state 55
    NOT             shift and go to state 59
    INTCONST        shift and go to state 40
    TRUE            shift and go to state 32
    FALSE           shift and go to state 44
    INPUT           shift and go to state 41
    LPAREN          shift and go to state 39
    IDENTIFIER      shift and go to state 57
    INCREMENT       shift and go to state 33
    DECREMENT       shift and go to state 46
    NEW             shift and go to state 54

    unop                           shift and go to state 51
    AE                             shift and go to state 64
    lhs                            shift and go to state 45
    primary                        shift and go to state 52
    functionCall                   shift and go to state 38
    SE                             shift and go to state 60
    AEOpt                          shift and go to state 62
    arrayAccess                    shift and go to state 56
    empty                          shift and go to state 63
    newArray                       shift and go to state 53

state 32

    (48) primary -> TRUE .

    LSQUARE         reduce using rule 48 (primary -> TRUE .)
    PLUS            reduce using rule 48 (primary -> TRUE .)
    MINUS           reduce using rule 48 (primary -> TRUE .)
    STAR            reduce using rule 48 (primary -> TRUE .)
    DIV             reduce using rule 48 (primary -> TRUE .)
    MOD             reduce using rule 48 (primary -> TRUE .)
    AND             reduce using rule 48 (primary -> TRUE .)
    OR              reduce using rule 48 (primary -> TRUE .)
    EQUAL           reduce using rule 48 (primary -> TRUE .)
    NEQUAL          reduce using rule 48 (primary -> TRUE .)
    LTHANEQ         reduce using rule 48 (primary -> TRUE .)
    LTHAN           reduce using rule 48 (primary -> TRUE .)
    GTHANEQ         reduce using rule 48 (primary -> TRUE .)
    GTHAN           reduce using rule 48 (primary -> TRUE .)
    SEMICOLON       reduce using rule 48 (primary -> TRUE .)
    DO              reduce using rule 48 (primary -> TRUE .)
    THEN            reduce using rule 48 (primary -> TRUE .)
    COMMA           reduce using rule 48 (primary -> TRUE .)
    RPAREN          reduce using rule 48 (primary -> TRUE .)
    RSQUARE         reduce using rule 48 (primary -> TRUE .)


state 33

    (38) SE -> INCREMENT . lhs
    (40) lhs -> . IDENTIFIER
    (41) lhs -> . arrayAccess
    (55) arrayAccess -> . primary LSQUARE AE RSQUARE
    (47) primary -> . INTCONST
    (48) primary -> . TRUE
    (49) primary -> . FALSE
    (50) primary -> . INPUT LPAREN RPAREN
    (51) primary -> . LPAREN AE RPAREN
    (52) primary -> . IDENTIFIER
    (53) primary -> . arrayAccess
    (54) primary -> . functionCall
    (56) functionCall -> . IDENTIFIER LPAREN argsOpt RPAREN

    IDENTIFIER      shift and go to state 35
    INTCONST        shift and go to state 40
    TRUE            shift and go to state 32
    FALSE           shift and go to state 44
    INPUT           shift and go to state 41
    LPAREN          shift and go to state 39

    primary                        shift and go to state 28
    functionCall                   shift and go to state 38
    lhs                            shift and go to state 65
    arrayAccess                    shift and go to state 34

state 34

    (41) lhs -> arrayAccess .
    (53) primary -> arrayAccess .

    SEMICOLON       reduce using rule 41 (lhs -> arrayAccess .)
    DO              reduce using rule 41 (lhs -> arrayAccess .)
    PLUS            reduce using rule 41 (lhs -> arrayAccess .)
    MINUS           reduce using rule 41 (lhs -> arrayAccess .)
    STAR            reduce using rule 41 (lhs -> arrayAccess .)
    DIV             reduce using rule 41 (lhs -> arrayAccess .)
    MOD             reduce using rule 41 (lhs -> arrayAccess .)
    AND             reduce using rule 41 (lhs -> arrayAccess .)
    OR              reduce using rule 41 (lhs -> arrayAccess .)
    EQUAL           reduce using rule 41 (lhs -> arrayAccess .)
    NEQUAL          reduce using rule 41 (lhs -> arrayAccess .)
    LTHANEQ         reduce using rule 41 (lhs -> arrayAccess .)
    LTHAN           reduce using rule 41 (lhs -> arrayAccess .)
    GTHANEQ         reduce using rule 41 (lhs -> arrayAccess .)
    GTHAN           reduce using rule 41 (lhs -> arrayAccess .)
    RPAREN          reduce using rule 41 (lhs -> arrayAccess .)
    THEN            reduce using rule 41 (lhs -> arrayAccess .)
    RSQUARE         reduce using rule 41 (lhs -> arrayAccess .)
    COMMA           reduce using rule 41 (lhs -> arrayAccess .)
    EQUALS          reduce using rule 41 (lhs -> arrayAccess .)
    INCREMENT       reduce using rule 41 (lhs -> arrayAccess .)
    DECREMENT       reduce using rule 41 (lhs -> arrayAccess .)
    LSQUARE         reduce using rule 53 (primary -> arrayAccess .)


state 35

    (40) lhs -> IDENTIFIER .
    (52) primary -> IDENTIFIER .
    (56) functionCall -> IDENTIFIER . LPAREN argsOpt RPAREN

    SEMICOLON       reduce using rule 40 (lhs -> IDENTIFIER .)
    DO              reduce using rule 40 (lhs -> IDENTIFIER .)
    PLUS            reduce using rule 40 (lhs -> IDENTIFIER .)
    MINUS           reduce using rule 40 (lhs -> IDENTIFIER .)
    STAR            reduce using rule 40 (lhs -> IDENTIFIER .)
    DIV             reduce using rule 40 (lhs -> IDENTIFIER .)
    MOD             reduce using rule 40 (lhs -> IDENTIFIER .)
    AND             reduce using rule 40 (lhs -> IDENTIFIER .)
    OR              reduce using rule 40 (lhs -> IDENTIFIER .)
    EQUAL           reduce using rule 40 (lhs -> IDENTIFIER .)
    NEQUAL          reduce using rule 40 (lhs -> IDENTIFIER .)
    LTHANEQ         reduce using rule 40 (lhs -> IDENTIFIER .)
    LTHAN           reduce using rule 40 (lhs -> IDENTIFIER .)
    GTHANEQ         reduce using rule 40 (lhs -> IDENTIFIER .)
    GTHAN           reduce using rule 40 (lhs -> IDENTIFIER .)
    RPAREN          reduce using rule 40 (lhs -> IDENTIFIER .)
    THEN            reduce using rule 40 (lhs -> IDENTIFIER .)
    RSQUARE         reduce using rule 40 (lhs -> IDENTIFIER .)
    COMMA           reduce using rule 40 (lhs -> IDENTIFIER .)
    EQUALS          reduce using rule 40 (lhs -> IDENTIFIER .)
    INCREMENT       reduce using rule 40 (lhs -> IDENTIFIER .)
    DECREMENT       reduce using rule 40 (lhs -> IDENTIFIER .)
    LSQUARE         reduce using rule 52 (primary -> IDENTIFIER .)
    LPAREN          shift and go to state 66


state 36

    (28) stmt -> FOR . LPAREN SEOpt SEMICOLON AEOpt SEMICOLON SEOpt RPAREN stmt

    LPAREN          shift and go to state 67


state 37

    (7) fundecl -> type IDENTIFIER LPAREN formalsOpt RPAREN stmt .

    INT             reduce using rule 7 (fundecl -> type IDENTIFIER LPAREN formalsOpt RPAREN stmt .)
    BOOL            reduce using rule 7 (fundecl -> type IDENTIFIER LPAREN formalsOpt RPAREN stmt .)
    VOID            reduce using rule 7 (fundecl -> type IDENTIFIER LPAREN formalsOpt RPAREN stmt .)
    $end            reduce using rule 7 (fundecl -> type IDENTIFIER LPAREN formalsOpt RPAREN stmt .)


state 38

    (54) primary -> functionCall .

    LSQUARE         reduce using rule 54 (primary -> functionCall .)
    PLUS            reduce using rule 54 (primary -> functionCall .)
    MINUS           reduce using rule 54 (primary -> functionCall .)
    STAR            reduce using rule 54 (primary -> functionCall .)
    DIV             reduce using rule 54 (primary -> functionCall .)
    MOD             reduce using rule 54 (primary -> functionCall .)
    AND             reduce using rule 54 (primary -> functionCall .)
    OR              reduce using rule 54 (primary -> functionCall .)
    EQUAL           reduce using rule 54 (primary -> functionCall .)
    NEQUAL          reduce using rule 54 (primary -> functionCall .)
    LTHANEQ         reduce using rule 54 (primary -> functionCall .)
    LTHAN           reduce using rule 54 (primary -> functionCall .)
    GTHANEQ         reduce using rule 54 (primary -> functionCall .)
    GTHAN           reduce using rule 54 (primary -> functionCall .)
    SEMICOLON       reduce using rule 54 (primary -> functionCall .)
    DO              reduce using rule 54 (primary -> functionCall .)
    THEN            reduce using rule 54 (primary -> functionCall .)
    COMMA           reduce using rule 54 (primary -> functionCall .)
    RPAREN          reduce using rule 54 (primary -> functionCall .)
    RSQUARE         reduce using rule 54 (primary -> functionCall .)


state 39

    (51) primary -> LPAREN . AE RPAREN
    (42) AE -> . AE binop AE
    (43) AE -> . unop AE
    (44) AE -> . primary
    (45) AE -> . SE
    (46) AE -> . newArray
    (79) unop -> . MINUS
    (80) unop -> . NOT
    (47) primary -> . INTCONST
    (48) primary -> . TRUE
    (49) primary -> . FALSE
    (50) primary -> . INPUT LPAREN RPAREN
    (51) primary -> . LPAREN AE RPAREN
    (52) primary -> . IDENTIFIER
    (53) primary -> . arrayAccess
    (54) primary -> . functionCall
    (35) SE -> . lhs EQUALS AE
    (36) SE -> . lhs INCREMENT
    (37) SE -> . lhs DECREMENT
    (38) SE -> . INCREMENT lhs
    (39) SE -> . DECREMENT lhs
    (61) newArray -> . NEW type dimexpr dim_star
    (55) arrayAccess -> . primary LSQUARE AE RSQUARE
    (56) functionCall -> . IDENTIFIER LPAREN argsOpt RPAREN
    (40) lhs -> . IDENTIFIER
    (41) lhs -> . arrayAccess

    MINUS           shift and go to state 55
    NOT             shift and go to state 59
    INTCONST        shift and go to state 40
    TRUE            shift and go to state 32
    FALSE           shift and go to state 44
    INPUT           shift and go to state 41
    LPAREN          shift and go to state 39
    IDENTIFIER      shift and go to state 57
    INCREMENT       shift and go to state 33
    DECREMENT       shift and go to state 46
    NEW             shift and go to state 54

    unop                           shift and go to state 51
    AE                             shift and go to state 68
    primary                        shift and go to state 52
    functionCall                   shift and go to state 38
    newArray                       shift and go to state 53
    lhs                            shift and go to state 45
    arrayAccess                    shift and go to state 56
    SE                             shift and go to state 60

state 40

    (47) primary -> INTCONST .

    LSQUARE         reduce using rule 47 (primary -> INTCONST .)
    PLUS            reduce using rule 47 (primary -> INTCONST .)
    MINUS           reduce using rule 47 (primary -> INTCONST .)
    STAR            reduce using rule 47 (primary -> INTCONST .)
    DIV             reduce using rule 47 (primary -> INTCONST .)
    MOD             reduce using rule 47 (primary -> INTCONST .)
    AND             reduce using rule 47 (primary -> INTCONST .)
    OR              reduce using rule 47 (primary -> INTCONST .)
    EQUAL           reduce using rule 47 (primary -> INTCONST .)
    NEQUAL          reduce using rule 47 (primary -> INTCONST .)
    LTHANEQ         reduce using rule 47 (primary -> INTCONST .)
    LTHAN           reduce using rule 47 (primary -> INTCONST .)
    GTHANEQ         reduce using rule 47 (primary -> INTCONST .)
    GTHAN           reduce using rule 47 (primary -> INTCONST .)
    SEMICOLON       reduce using rule 47 (primary -> INTCONST .)
    DO              reduce using rule 47 (primary -> INTCONST .)
    THEN            reduce using rule 47 (primary -> INTCONST .)
    COMMA           reduce using rule 47 (primary -> INTCONST .)
    RPAREN          reduce using rule 47 (primary -> INTCONST .)
    RSQUARE         reduce using rule 47 (primary -> INTCONST .)


state 41

    (50) primary -> INPUT . LPAREN RPAREN

    LPAREN          shift and go to state 69


state 42
